2007-08-01  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl.mdp,
	  MonoDevelop.VersionControl/gtk-gui/MonoDevelop.VersionControl.Dialogs.SelectRepositoryDialog.cs,
	  MonoDevelop.VersionControl/gtk-gui/MonoDevelop.VersionControl.Dialogs.EditRepositoryDialog.cs,
	  MonoDevelop.VersionControl/gtk-gui/MonoDevelop.VersionControl.Dialogs.CommitDialog.cs,
	  MonoDevelop.VersionControl/gtk-gui/gui.stetic: Fix dialog spacing.

2007-07-30  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl.Views/Statuses.cs:
	  Made some strings translatable. Update commit button after changing
	  selection.

2007-07-29  Zach Lute <zach.lute@gmail.com>

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl.Views/Statuses.cs: 
	  Added Select All and Select None buttons to the commit/status view. (Bug #82146)

2007-07-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl.Views/Statuses.cs:
	  Reset the global comment of the changeset before committing. Fixes
	  bug #82172.

2007-07-25  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.Gui/UserPasswordDialog.cs:
	Close the dialog when the user hits Enter in the Password field (or User field if no passwd is needed).

2007-07-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl.Dialogs/SelectRepositoryDialog.cs:
	  Load repository info in a background thread.

2007-07-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibSvnClient.cs,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs:
	  The result_rev parameter of svn_client_checkout is not a
	  svn_opt_revision_t, but a svn_revnum_t. Might fix bug #81870.

2007-07-19  Jeffrey Stedfast  <fejj@novell.com>
